# psrtool

./: .gitignore  pyproject.toml
examples/: combine.py
psrtool/: cli.py  combinefits.py  fits2fil.py  psrfits.py
tests/: test_cli.py  test_combinefits.py  test_psr2fil.py  test_psrfits.py
tests/testdata/: combined.fil  test1.fil  test1.fits  test2.fil  test2.fits
