[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsartools"
version = "0.1.0.rc1"
description = "Tools for reading PSRFITS data and writing SIGPROC filterbank files."
requires-python = ">=3.9"
authors = [
    { name = "lintian233" },
]
dependencies = [
    "numpy", 
    "tqdm",
    "astropy",
    "your",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
combinefits = "psrtool.cli:combinefitscli"
fits2fil = "psrtool.cli:fits2filcli"
fil2fits = "psrtool.cli:fil2fitscli"


[tool.setuptools.packages.find]
where = ["."]
include = ["psrtool*"]
